# robotodo-isaac

./: .readthedocs.yml  pyproject.toml
.github/workflows/: test.yml
__todo__/: todo.md
__todo__/todo-202509xx/: todo-maybe-rm.md  todo.md
__todo__/todo-202510xx/: notes.md  todo-tut.md  todo.md
__todo__/todo-202511xx/: todo-engines-isaac-urdf-fix.ipynb  todo-min-v2.ipynb
__todo__/todo-misc/: todo-curobo.ipynb  todo-engines-isaac-v10-deformable-vol.ipynb  todo-engines-isaac-v10-geom.ipynb  todo-engines-isaac-v10-material-shader.ipynb  todo-engines-isaac-v10-motion-planning.ipynb  todo-engines-isaac-v10-path.ipynb  todo-engines-isaac-v10-pose.ipynb  todo-engines-isaac-v10-tetmesh-viz.ipynb  todo-engines-isaac-v2.ipynb  todo-engines-isaac-v3-scene.ipynb  todo-engines-isaac-v3.ipynb  todo-engines-isaac-v4-fix.ipynb  todo-engines-isaac-v5-cam.ipynb  todo-engines-isaac-v5.ipynb  todo-engines-isaac-v6-motion-planning.ipynb  todo-engines-isaac-v6-viewer.ipynb  todo-engines-isaac-v6.ipynb  todo-engines-isaac-v7-viewer-webrtc.ipynb  todo-engines-isaac-v8-attach-stage.ipynb  todo-engines-isaac-v8-cam-render.ipynb  todo-engines-isaac-v8-min.ipynb  todo-engines-isaac-v8-pose.ipynb  todo-engines-isaac-v8-tut-code.ipynb  todo-engines-isaac-v9-deformable.ipynb  todo-engines-isaac-v9-motion.ipynb  todo-engines-isaac.ipynb  todo-exp.kit  todo-isaacsim-appframework-v2.ipynb  todo-isaacsim-appframework.ipynb  todo-pi0-perf.ipynb  todo-pi0-test.ipynb  todo-pi0.ipynb  todo-tensorspecs-v1-annotations.ipynb  todo-tensorspecs-v1.ipynb  todo-utils-geom.ipynb  todo-viewer-anywidget-uicomm-spec.ts  todo-viewer-anywidget.ipynb  todo-viewer-isaacsim.ipynb
__todo__/todo-misc/_todo_rm_engines/_core_legacy/: path.py  pose.py
__todo__/todo-misc/_todo_rm_engines/_isaac_legacy/: __init__.py  _kernel.py  articulation.py  camera.py  scene.py
__todo__/todo-misc/_todo_rm_engines/_isaac_legacy/utils/: futures.py
__todo__/todo-misc/dummy/: somemod.py
__todo__/todo-misc/todo-curobo-sample-configs/franka/: config.yml
__todo__/todo-misc/todo-curobo-sample-configs/franka/franka_description/franka_panda/: franka_panda.usd
__todo__/todo-misc/todo-curobo-sample-configs/franka/franka_description/franka_panda/configuration/: franka_panda_physics.usd  franka_panda_robot.usd
__todo__/todo-misc/todo-curobo-sample-configs/franka/franka_description/franka_panda_no_gripper/: franka_panda_no_gripper.usd
__todo__/todo-misc/todo-curobo-sample-configs/franka/franka_description/franka_panda_no_gripper/configuration/: franka_panda_no_gripper_physics.usd  franka_panda_no_gripper_robot.usd
__todo__/todo-misc/todo-curobo-sample-configs/franka/franka_description/panda/: panda.usd
__todo__/todo-misc/todo-curobo-sample-configs/franka/franka_description/panda/configuration/: panda_physics.usd  panda_robot.usd
__todo__/todo-misc/todo-curobo-sample-configs/franka/franka_description/panda_gripper/: panda_gripper.usd
__todo__/todo-misc/todo-curobo-sample-configs/franka/franka_description/panda_gripper/configuration/: panda_gripper_base.usd  panda_gripper_physics.usd  panda_gripper_robot.usd  panda_gripper_sensor.usd
docs/: _toc.yml
docs/content/: front-page.rst
docs/content/manuals/: tutorial-000_installation.rst  tutorial-001_quickstart.ipynb  tutorial-002_conceptual_overview.rst  tutorial-003_hierarchy.ipynb  tutorial-005_engine-sim-scene-interaction.ipynb  tutorial-010_algo-motion-planning.ipynb  tutorial-010_articulations.ipynb  tutorial-010_bodies.ipynb  tutorial-010_sensors_cameras.ipynb  tutorial-011_algo-nn-supervised.ipynb  tutorial-105_engine-sim-scene-construction.ipynb
docs/content/user-guide/: tutorial-012_algo-nn-reinforcement.ipynb  tutorial-105_engine-sim-scene-construction.ipynb
