[build-system]
requires = [
    "setuptools", 
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "robotodo-isaac"
dynamic = ["version"]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # TODO
    "robotodo-core @ git+https://github.com/robotodo-platform/robotodo-core.git@cd3bef9",
    # TODO 
    "torch",
    "numpy",
    "warp-lang",
    "einops",

    # omniverse specific dependencies
    # NOTE omniverse-kit 107.3.3 required by some isaacsim exts is missing from PyPI
    # "omniverse-kit>=107.0.0,<110.0.0",
    # "isaacsim[all,extscache]>=5.0.0,<6.0.0",
    "isaacsim-kernel>=5.0.0,<6.0.0", 
    "nest_asyncio",
    # NOTE limited to numpy v1 due to omni?
    "numpy>=1.0.0,<2.0.0",
    "warp-lang>=1.8.0,<1.9.0",

    # TODO
    # TODO make optional??
    # TODO this is only required by algos.motion_planning
    # TODO cc1plus error: conda install -c conda-forge cxx-compiler
    "ninja", # NOTE required for jit compilation of curobo torch exts
    # "nvidia_curobo @ git+https://github.com/NVlabs/curobo.git@v0.7.7",
    # TODO
    "nvidia_curobo @ git+https://github.com/robotodo-platform/curobo.git@7563d30",
    "morphitx @ git+https://github.com/robotodo-platform/morphitx.git@8faa500",
]

[project.optional-dependencies]
test = [
    "pytest", 
    "pytest-asyncio", 
    "pytest-benchmark", 
    "numpy",
]
lint = [
    "ruff",
]
docs = [
    # TODO version
    "jupyter-book>=1.0.0,<2.0.0",
    "sphinxcontrib-mermaid",
]

[tool.setuptools.packages.find]
where = ["packages"]
namespaces = true

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["packages"]
# addopts = "--import-mode=importlib --doctest-modules --capture=tee-sys"
addopts = "--import-mode=importlib --doctest-modules"
asyncio_mode = "auto"

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
